fix text-align for search bar

--- a/experiment/css/index.css
+++ b/experiment/css/index.css
@@ -13,6 +13,7 @@
 }
 
 .left-panel {
+    text-align: left;
     width: 950px;
     display: inline-block;
     border-right: 1px solid #e2e2e2;
